modified:   deeplearning/chapter6.md 	new file:   html/README.html 	modified:   html/deeplearning/chapter6.html 	modified:   html/deeplearning/chapter7.html 	modified:   html/deeplearning/chapter8.html

--- a/html/README.html
+++ b/html/README.html
@@ -30,22 +30,6 @@ $("script[type='math/tex; mode=display']").replaceWith(function() {
 </script> 
 </head>
 <body>
-
-<h1 id="optimization-for-training-deep-models">Optimization for Training Deep Models</h1>
-
-<h2 id="how-learning-differs-from-pure-optimization">How Learning Differs from Pure Optimization</h2>
-
-<h2 id="challenges-in-neural-network-optimizatino">Challenges in Neural Network Optimizatino</h2>
-
-<h2 id="basic-algorithms">Basic Algorithms</h2>
-
-<h2 id="parameter-initialization-strategies">Parameter initialization Strategies</h2>
-
-<h2 id="algorithms-with-adaptive-learning-rates">Algorithms with Adaptive Learning Rates</h2>
-
-<h2 id="approximate-second-order-methods">Approximate Second-Order Methods</h2>
-
-<h2 id="optimization-strategies-and-meta-algorithms">Optimization Strategies and Meta-Algorithms</h2>
-
+<h1 id="math-notes">math-notes</h1>
 </body>
 </html>
