--- a/render/render_gfm.html
+++ b/render/render_gfm.html
@@ -4,9 +4,9 @@
 		  <meta charset="utf-8"/>
 		  <title>Rendering Github Flavored Markdown</title>
 		  <script src="marked.min.js"></script>
-		  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384-wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous"> 
-		  <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js" integrity="sha384-/y1Nn9+QQAipbNQWU65krzJralCnuOasHncUFXGkdwntGeSvQicrYkiUBwsgUqc1" crossorigin="anonymous"></script> 
-		  <script src="https://code.jquery.com/jquery-1.12.4.js"></script> 
+		  <link rel="stylesheet" href="katex/katex.min.css"> 
+		  <script src="katex/katex.min.js"></script> 
+		  <script src="jquery.min.js"></script> 
 		  <script>
 marked.setOptions({
 	renderer: new marked.Renderer(),
@@ -38,6 +38,7 @@ var get_location = function(href) {
 };
 var get_absolute_url = function(rel_path) {
 	if(rel_path==null) return null;
+	if(rel_path.startsWith("http") || rel_path.startsWith("ftp")) return rel_path;
 	var href = get_location(window.location.href);
 	var pathname = href.pathname;
 	//console.log(href.pathname);
@@ -137,7 +138,27 @@ var handle_katex_synatx = function(text) {
 		}
 		return pair_replace(line, '$$', '$$', '`$', '$`');
 	}).join('\n');
-	console.log(text);
+	//console.log(text);
+	return text;
+};
+var dirname = function(f) {
+	if(f.indexOf('/')==-1) return './';
+	return f.replace(/\\/g, '/').replace(/\/[^\/]*$/, '');
+};
+var basename = function(f) {
+	return f.replace(/\\/g,'/').replace(/.*\//, '');
+};
+var handle_external_files = function(text, md_dir) {
+	console.log(md_dir);
+	if(!md_dir.endsWith("/")) md_dir = md_dir + '/';
+	text = text.replace(/\[[^\[\]]*\]\([^\(\)]*\)/g, function(match) {
+		if(match.match(/\]\((http|ftp|https):/)) return match;
+		return match.replace(/\]\(/, '](' + md_dir);
+			});
+	text = text.replace(/(src|href)="[^"]*"/g, function(match) {
+		if(match.match(/="(http|ftp|https):/)) return match;
+		return match.replace(/="/, "=\"" + md_dir);
+		});
 	return text;
 };
 var main = function(callback) {
@@ -146,6 +167,7 @@ var main = function(callback) {
 	readTextFile(url, function(text) {
 		if(text=="") return callback("");
 		text = handle_katex_synatx(text);
+		text = handle_external_files(text, dirname(file));
 		var html = marked(text);
 		html = handle_inline_math(html);
 		html = handle_display_math(html);
@@ -158,7 +180,7 @@ var main = function(callback) {
 	<body>
 		<div id="content"></div>
 		<script>
-main(function(html) { document.getElementById('content').innerHTML = html; });
+			main(function(html) { document.getElementById('content').innerHTML = html; });
 		</script>
 	</body>
 </html>
