--- a/render/test_marked.html
+++ b/render/test_marked.html
@@ -9,7 +9,7 @@
 		  <div id="content"></div>
 		    <script>
     document.getElementById('content').innerHTML =
-	      marked('# `Marked` in browser\n\nRendered by **marked**.');
+	      marked('# [`Marked`][marked] in browser\n\nRendered by **marked**.\n\n  [marked]: https://github.com/chjj/marked');
 		    </script>
 	</body>
 </html>
