--- a/render/render_gfm.html
+++ b/render/render_gfm.html
@@ -12,6 +12,22 @@
 		  <script>hljs.initHighlightingOnLoad();</script>
 		  <!--
 		  -->
+<style>
+caption {
+	font-size: 120%;
+	font-weight: bold;
+	text-align: left
+}
+table {
+	border-collapse: collapse;
+}
+table,th,td {
+	border: 1px solid black;
+}
+td.noborder {
+	border: 0px;
+}
+</style>
 		  <script>
 marked.setOptions({
 	renderer: new marked.Renderer(),
